--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.1.13",
-    "devtools": "^8.42.0",
-    "immer": "^10.1.3",
     "lucide-react": "^0.544.0",
-    "persist": "^0.2.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "zustand": "^5.0.8"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
